--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -27,8 +27,11 @@ a,
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
+}
+
+footer {
+  position:relative;
+  vertical-align: bottom;
 }
